# maf

./: .gitignore  CMakeLists.txt  README.md  maf.pro  maf.vcxproj  maf.vcxproj.filters
.github/workflows/: ccpp.yml
IPC-Idea/: BusyTimer.txt  Communications.cpp  Component.txt  Design.eap  IPCClient.txt  IPCServer.txt  IPC_Communicator.txt  MessageTypes.txt
Source/: Threading.pro  maf.vcxproj.filters  main.cpp  thaf.pro
Source/Threading/: IThreadPool.h  PriorityThreadPool.cpp  Signal.cpp  StableThreadPool.cpp  StableThreadPool.h  TheadSafeQueue.h  ThreadJoiner.h
Source/Threading/Headers/Interfaces/: BusyTimer.h  Queue.h  Runnable.h  ThreadPoolFactory.h  ThreadSafeQueue.h
Source/Threading/Src/ThreadPool/: DynamicCountThreadPool.cpp  PriorityThreadPool.cpp  StableThreadPool.cpp  ThreadPoolFactory.cpp  VaryCountThreadPool.cpp
Source/Threading/Src/Time/: BusyTimer.cpp  BusyTimerImpl.cpp  Waiter.cpp
Source/headers/Application/Framework/: AppComponent.h  Component.h  MessageHandler.h  Messages.h  Timer.h
Source/headers/Framework/Application/: AppComponent.h  Application.h  Component.h  Messages.h  Timer.h
Source/headers/Framework/Logging/: ConsoleLogger.h  LoggerBase.h  LoggerInterface.h  LoggingComponent.h
Source/headers/Framework/Messaging/: Message.h
Source/headers/Libs/Patterns/: Patterns.h
Source/headers/Libs/Utils/: IDManager.h
Source/headers/Messaging/: Message.h
Source/headers/Threading/Interfaces/: BusyTimer.h  IThreadPool.h  Queue.h  Runnable.h  ThreadJoiner.h  ThreadPoolFactory.h  ThreadSafeQueue.h  Waiter.h
Source/headers/Utils/: IDManager.h
Source/include/maf/logging/: ConsoleLogger.h  LoggerBase.h
Source/include/maf/messaging/: MessageBase.h
Source/include/maf/threading/: IThreadPool.h  Thread.h  ThreadSafeQueue.h  TimerManager.h
Source/include/maf/utils/: IDManager.h
Source/include/thaf/Application/: AppComponent.h  Application.h  BasicMessages.h  Component.h  IPCClient.h  IPCMessages.h  IPCServer.h  Timer.h
Source/include/thaf/Logging/: ConsoleLogger.h  LoggerBase.h  LoggerInterface.h  LoggingComponent.h
Source/include/thaf/Messaging/: Message.h  MessageHandler.h
Source/include/thaf/Threading/: Thread.h  ThreadSafeQueue.h  TimerManager.h
Source/include/thaf/Utils/: IDManager.h
Source/include/thaf/logging/: ConsoleLogger.h  LoggerBase.h  LoggerInterface.h  LoggingComponent.h
Source/src/Test/: FrameworkAppTest.cpp  SerializationTest.cpp
Source/src/Utils/: IDManager.cpp
Source/src/maf/: main.cpp
Source/src/thaf/: main.cpp
Source/test/: TestInit.bat
Source/test/IPCClient/: IPCClient.sln  IPCClient.vcxproj
Source/test/IPCServer/: IPCServer.sln  IPCServer.vcxproj  IPCServer.vcxproj.filters
Source/test/Test/: FrameworkAppTest.cpp  SerializationTest.cpp
Source/vsproject/: thaf.sln
Source/vsproject/Release/: thaf.ipdb
Source/vsproject/thaf/: thaf.vcxproj  thaf.vcxproj.filters
Threading/: Threading1.pro  main.cpp
Threading/Threading/: IThreadPool.h  PriorityThreadPool.h  Queue.h  StableThreadPool.cpp  StableThreadPool.h  TheadSafeQueue.h  ThreadJoiner.h  Timer.cpp  Timer.h  VaryCountThreadPool.cpp  VaryCountThreadPool.h  Waiter.cpp
cmake/: precompile.cmake
include/maf/: ITCProxy.h  ITCStub.h  IThCProxy.h  IThCStub.h  LocalIPCProxy.h  LocalIPCStub.h  Messaging.h  Observable.h  SignalSlots.h
include/maf/export/: MafExport_global.h
include/maf/logging/: Logger.h  LoggerInterface.h  LoggingComponent.h
include/maf/messaging/: AsyncCallbackExecutor.h  AsyncComponent.h  BasicMessages.h  CallbackExecutorIF.h  CompMessageBase.h  CompThread.h  Component.h  ComponentDef.h  ComponentEx.h  ComponentRequest.h  DirectExecutor.h  Exceptions.h  ExecutorIF.h  ExtensibleComponent.h  IPCServer.h  MessageBase.h  MessageHandler.h  MessageHandlerManager.h  MessageQueue.h  MessageRouting.h  MsgConnectionGroup.h  MsgDefHelper.mc.h  Processor.h  ProcessorDef.h  ProcessorEx.h  Routing.h  ShortLivedHandlersManager.h  SignalTimer.h  SyncCallbackExecutor.h  SyncTimer.h  Timer.h
include/maf/patterns/: Patterns.h
include/maf/threading/: AtomicObject.h  IThreadPool.h  Lockable.h  Locker.h  MutexRef.h  Queue.h  Runnable.h  Thread.h  ThreadJoiner.h  ThreadPoolFactory.h  ThreadPoolImplBase.h  ThreadSafeQueue.h  TimerManager.h  Upcoming.h  Waiter.h
include/maf/utils/: CallOnExit.h  DirectExecutor.h  ExecutorIF.h  IDManager.h  Observable.h  Pointers.h  Process.h  ProcessorChain.h  SignalSlot.h  SignalSlots.h  StringifyableEnum.h  TimeMeasurement.h
sample/: CMakeLists.txt  Client.h  Server.h  client-server-contract.h  component_sample.cpp  inapp-client-server.cpp  inapp-client-server_sample.cpp  ipc-client.cpp  ipc-client_sample.cpp  ipc-server.cpp  ipc-server_sample.cpp  serialization.cpp  signal_slot_sample.cpp  simple-stub-proxy.cpp  simple-stub-proxy_sample.cpp  timer_sample.cpp
src/maf/: main.cpp
src/maf/logging/: Logger.cpp
src/maf/messaging/: CompThread.cpp  Component.cpp  MessageBase.cpp  SyncTimer.cpp  Timer.cpp  TimerManager.cpp  TimerManager.h  TimerManagerImpl.cpp  TimerManagerImpl.h
src/maf/threading/: Thread.cpp
src/maf/utils/: IDManager.cpp
test/: CMakeLists.txt  component_test.cpp  ipc_sender_receiver_test.cpp  message_routing_test.cpp  precompile.cpp  processor_test.cpp  serialization_test.cpp  signal_slot_test.cpp  stub_proxy_test.cpp  test.h  timer_test.cpp  utils_test.cpp
test/ClientServer/: CMakeLists.txt  Client.h  Contract.h  ControllableInterface.h  Server.h  TestClient.cpp  TestServer.cpp  WeatherContract.h  main.cpp
test/ClientServer/IPCClient/: main.cpp
test/ClientServer/IPCServer/: main.cpp
test/Component/: CMakeLists.txt  main.cpp
test/IPCClient/: IPCClient.vcxproj  IPCClient.vcxproj.filters
test/IPCClient/src/: Client.cpp
test/IPCServer/: IPCServer.vcxproj  IPCServer.vcxproj.filters
test/IPCServer/src/: IPCServer.cpp  WeatherContract.h
test/Serialization/: CMakeLists.txt  FrameworkAppTest.cpp  main.cpp
test/SerializationTest/: SerializationTest.cpp  main.cpp
test/catch/: catch_amalgamated.cpp
tools/scripts/: macro_backingup_generator.sh
(+674 files in other folders)
